# Ms_Elective_KI

./: .env.example  .gitignore  DESIGN.md  EVALUATION.md  README.md  REPORT.md  TEAM.md  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: team-signup.yml  user-story.yml
exercises/: README.md
exercises/de/: 00-vision-architecture.md  01-first-mvp.md  01-simple-prompting.md  01-zero-shot-prompting.md  02-prompt-template.md  02-tools.md  03-rag.md  03-single-agent.md  04-dynamic-orchestration.md  04-multi-agent.md  05-production-safety.md  05-rag-and-tools.md  README.md  assignment-overview.md  assignment-sprint-plan.md  assignment-templates.md
exercises/en/: 00-vision-architecture.md  01-first-mvp.md  01-simple-prompting.md  01-zero-shot-prompting.md  02-prompt-template.md  02-tools.md  03-rag.md  03-single-agent.md  04-dynamic-orchestration.md  04-multi-agent.md  05-production-safety.md  05-rag-and-tools.md  assignment-overview.md  assignment-sprint-plan.md  assignment-templates.md  step_00_setup_and_python_basics.ipynb  step_00b_test_setup_and_first_agent.ipynb  step_01_test_setup_and_first_agent.ipynb  step_01_zero_shot_prompting.ipynb  step_02_intro_to_crewai.ipynb  step_02a_few_shot.ipynb  step_02b_prompt_template.ipynb  step_02c_chain_prompting.ipynb  step_02d_chain_of_thought.ipynb  step_02e_tree_of_thought.ipynb  step_03_05_agents.ipynb  step_03_single_agent.ipynb  step_03_zero_shot_prompting.ipynb  step_04_few_shot.ipynb  (+20 more)
knowledge/: ai_act_internal_review.txt
lectures/: README.md
output/: report.md
(+65 files in other folders)
