[project]
name = "research_crew"
version = "0.1.0"
description = "research_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.9.3",
    "google-generativeai>=0.8.6",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
research_crew = "research_crew.main:run"
run_crew = "research_crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]
